# my-ai-spec-book

./: .gitignore  CLAUDE.md  CORS_FIX_SUMMARY.md  Hackathon I_ Physical AI & Humanoid Robotics Textbook.md  README.md  TESTING_GUIDE.md  TEXT_SELECTION_FIX.md
api/: Dockerfile  QUICKSTART.md  README.md  SETUP_GUIDE.md  pyproject.toml
api/app/: __init__.py  config.py  main.py  rag_service.py
api/app/models/: chat.py  document.py
api/app/routers/: chat.py  health.py
api/app/services/: embedder.py  llm.py  qdrant_client.py  retriever.py
api/app/utils/: chunking.py  grounding.py
api/scripts/: index_chapters.py  index_content.py
api/tests/: test_grounding.py
backend/: README.md  pyproject.toml  run_server.py
backend/.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _io.data.json  (+209 more)
backend/app/: __init__.py  chunking.py  config.py  embeddings.py  indexing.py  main.py  models.py  qdrant_client.py  rag.py  routes.py  schemas.py
backend/docs/: API.md
backend/tests/: conftest.py
(+3109 files in other folders)
